--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.kingfisherphuoc:quick-action-dialog-fragment:1.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
